--- a/config.org
+++ b/config.org
@@ -2163,9 +2163,9 @@ Finally, specify to =erc= that you use a =.authinfo= file with:
     (erc-notice-face ((t (:foreground "#ebcb8b"))))
     (erc-timestamp-face ((t (:foreground "#a3be8c"))))
     :custom
-    (erc-autojoin-channels-alist '(("freenode.net" "#archlinux" "#bash" "##c++"
-                                    "#emacs""#i3" "#latex" "#linux" "#python"
-                                    "#reactjs" "#sway")))
+    (erc-autojoin-channels-alist '(("freenode.net" "#archlinux" "#bash" "##c"
+                                    "##c++" "#emacs""#i3" "#linux" "#notmuch"
+                                    "#python")))
     (erc-autojoin-timing 'ident)
     (erc-fill-function 'erc-fill-static)
     (erc-fill-static-center 22)
