--- a/config.org
+++ b/config.org
@@ -732,7 +732,7 @@ decent configuration to feel comfortable when handling such files.
       "Prints the arrays of numbers in one line."
       (let* ((json-encoding-pretty-print
               (and json-encoding-pretty-print
-                   (not (loop for x across array always (numberp x)))))
+                   (not (cl-loop for x across array always (numberp x)))))
              (json-encoding-separator (if json-encoding-pretty-print "," ", ")))
         (funcall encode array)))
     :config (advice-add 'json-encode-array :around #'my/json-array-of-numbers-on-one-line))
@@ -2565,7 +2565,7 @@ Configure senders to automatically choose the correct auth from `.authinfo.gpg`
     (message-remove-header "X-Message-SMTP-Method") ;; Remove. We always determine it by the From field
     (let ((sender
            (message-fetch-field "From")))
-      (loop for (addr server port usr) in smtp-accounts
+      (cl-loop for (addr server port usr) in smtp-accounts
             when (string-match addr sender)
             do (message-add-header (format "X-Message-SMTP-Method: smtp %s %d %s" server port usr)))
       (let ((xmess
