--- a/config.org
+++ b/config.org
@@ -3448,14 +3448,14 @@ authoring documents with a fast and effective plain-text system.
     (org-yank-adjusted-subtrees t)
     :config
     (add-to-list 'org-global-properties '("Effort_ALL". "0:05 0:15 0:30 1:00 2:00 3:00 4:00"))
-    (add-to-list 'org-speed-commands-user '("!" my/org-clock-in-and-track))
-    (add-to-list 'org-speed-commands-user '("$" call-interactively 'org-archive-subtree))
-    (add-to-list 'org-speed-commands-user '("d" my/org-move-line-to-destination))
-    (add-to-list 'org-speed-commands-user '("i" call-interactively 'org-clock-in))
-    (add-to-list 'org-speed-commands-user '("o" call-interactively 'org-clock-out))
-    (add-to-list 'org-speed-commands-user '("s" call-interactively 'org-schedule))
-    (add-to-list 'org-speed-commands-user '("x" org-todo "DONE"))
-    (add-to-list 'org-speed-commands-user '("y" org-todo-yesterday "DONE"))
+    (add-to-list 'org-speed-commands '("!" my/org-clock-in-and-track))
+    (add-to-list 'org-speed-commands '("$" call-interactively 'org-archive-subtree))
+    (add-to-list 'org-speed-commands '("d" my/org-move-line-to-destination))
+    (add-to-list 'org-speed-commands '("i" call-interactively 'org-clock-in))
+    (add-to-list 'org-speed-commands '("o" call-interactively 'org-clock-out))
+    (add-to-list 'org-speed-commands '("s" call-interactively 'org-schedule))
+    (add-to-list 'org-speed-commands '("x" org-todo "DONE"))
+    (add-to-list 'org-speed-commands '("y" org-todo-yesterday "DONE"))
     (advice-add 'org-deadline :after (ignore-args #'org-save-all-org-buffers))
     (advice-add 'org-schedule :after (ignore-args #'org-save-all-org-buffers))
     (advice-add 'org-store-log-note :after (ignore-args #'org-save-all-org-buffers))
