--- a/config.org
+++ b/config.org
@@ -1276,27 +1276,28 @@ different in your country, therefore, adapt the configuration below accordingly.
 Always good to have a dashboard.
 
 #+begin_src emacs-lisp :tangle yes
-    (use-package dashboard
-      :if (< (length command-line-args) 2)
-      :preface
-      (defun dashboard-load-packages (list-size)
-        (insert (make-string (ceiling (max 0 (- dashboard-banner-length 38)) 5) ? )
-                (format "%d packages loaded in %s" (length package-activated-list) (emacs-init-time))))
-      :custom
-      (dashboard-center-content t)
-      (dashboard-items '((recents . 10)
-                         (bookmarks . 2)
-                         (projects . 4)
-                         (agenda . 5)))
-      (dashboard-set-file-icons t)
-      (dashboard-set-heading-icons t)
-      (dashboard-set-init-info nil)
-      (dashboard-set-navigator t)
-      (dashboard-startup-banner 'logo)
-      :config
-      (add-to-list 'dashboard-item-generators '(packages . dashboard-load-packages))
-      (setq initial-buffer-choice (lambda () (get-buffer "*dashboard*")))
-      (dashboard-setup-startup-hook))
+  (use-package dashboard
+    :if (< (length command-line-args) 2)
+    :preface
+    (defun dashboard-load-packages (list-size)
+      (insert (make-string (ceiling (max 0 (- dashboard-banner-length 38)) 5) ? )
+              (format "%d packages loaded in %s" (length package-activated-list) (emacs-init-time))))
+    :custom
+    (dashboard-center-content t)
+    (dashboard-items '((recents . 10)
+                       (bookmarks . 2)
+                       (projects . 4)
+                       (agenda . 5)))
+    (dashboard-set-file-icons t)
+    (dashboard-set-heading-icons t)
+    (dashboard-set-init-info nil)
+    (dashboard-set-navigator t)
+    (dashboard-startup-banner 'logo)
+    :config
+    (add-to-list 'dashboard-item-generators '(packages . dashboard-load-packages))
+    (setq initial-buffer-choice (lambda () (get-buffer "*dashboard*")))
+    (add-hook 'dashboard-mode-hook (lambda () (display-line-numbers-mode -1)))
+    (dashboard-setup-startup-hook))
 #+end_src
 
 ** Deft
