fix(undo): undo files in one location

--- a/config.org
+++ b/config.org
@@ -1512,7 +1512,7 @@ this, Emacs treats "undo itself as another editing that can be undone".
     :custom
     (undo-tree-visualizer-timestamps t)
     (undo-tree-visualizer-diff t)
-    (setq undo-tree-history-directory-alist '(("." . "~/.config/emacs/undo"))))
+    (undo-tree-history-directory-alist '(("." . "~/.config/emacs/undo"))))
 #+end_src
 
 *** =web-mode=
