--- a/config.org
+++ b/config.org
@@ -133,9 +133,10 @@ installed if it isn't already.
 Make sure Emacs uses all the correct environment variables
 
  #+begin_src emacs-lisp :tangle yes
- (use-package exec-path-from-shell
-   :init
-   (exec-path-from-shell-initialize))
+   (use-package exec-path-from-shell
+     :ensure t
+     :init
+     (exec-path-from-shell-initialize))
  #+end_src
 
 * Start Up
@@ -283,6 +284,9 @@ found on the [[https://github.com/emacs-lsp/lsp-mode][lsp-mode]] page.
     :config
     ;;; dap for c++
     (require 'dap-lldb)
+
+    ;;; dap for Rust
+    (require 'dap-cpptools)
 
     ;;; set the debugger executable (c++)
     (setq dap-lldb-debug-program '("/usr/bin/lldb-vscode"))
@@ -986,11 +990,9 @@ code highlighting, compilation and cargo commands bound to emacs shortcuts, and
 a few other features.
 
 #+begin_src emacs-lisp :tangle yes
-  (use-package rust-mode
-    :ensure)
+  (use-package rust-mode)
 
   (use-package rustic
-    :ensure
     :bind (:map rustic-mode-map
                 ("M-j" . lsp-ui-imenu)
                 ("M-?" . lsp-find-references)
@@ -1076,7 +1078,6 @@ However, =xml-mode= exists to help us:
 
 #+begin_src emacs-lisp :tangle yes
   (use-package yaml-mode
-    :ensure t
     :delight "ψ "
     :mode "\\.yml\\'"
     :interpreter ("yml" . yaml-mode)
@@ -1222,7 +1223,6 @@ Some buffers should not be deleted by accident:
  Enable button lock mode
  #+begin_src emacs-lisp :tangle yes
  (use-package button-lock
-   :ensure t
    :config (global-button-lock-mode 1))
  #+end_src
 
@@ -2686,7 +2686,6 @@ parenthesis. Anyway, if you don't like it, you can try taking a look at
 #+begin_src emacs-lisp :tangle yes
   (use-package smartparens
     :defer 1
-    :ensure t
     :delight
     :config
     (setq sp-show-pair-from-inside nil)
@@ -3029,7 +3028,6 @@ locally, download the desktop version and change the paths indicated below.
 
  #+begin_src emacs-lisp :tangle yes
    (use-package iedit
-     :ensure t
      :bind ("C-:" . iedit-mode))
  #+end_src
 
@@ -3227,16 +3225,6 @@ Git clients exist, only Magit and Git itself deserve to be called porcelains.
     :hook (magit-diff-visit-file . (lambda ()
                                      (when smerge-mode
                                        (hydra-merge/body)))))
-#+end_src
-
-In addition to that, I like to see the lines that are being modified in the file
-while it is being edited.
-
-#+begin_src emacs-lisp :tangle yes
-  (use-package git-gutter
-    :defer 0.3
-    :delight
-    :init (global-git-gutter-mode +1))
 #+end_src
 
 Finally, one last package that I like to use with Git to easily see the changes
